src/objects/SAE_Product_Code__mdt.object
<CustomObject>
    <fields>
        <fullName>From_CDB__c</fullName>
        <label>From CDB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_Description__c</fullName>
        <label>Product Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_To_NDB__c</fullName>
        <label>Send To NDB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SAE Product Code</label>
    <listViews>
        <fullName>SAE</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>From_CDB__c</columns>
        <columns>Send_To_NDB__c</columns>
        <columns>Product_Code_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>SAE</label>
    </listViews>
    <pluralLabel>SAE Product Codes</pluralLabel>
</CustomObject>